# labs-redis-sink-connector

./: .gitignore  Cargo.toml  Connector.toml  README.md  config-example.yaml  config-example_mqtt.yaml  config-example_transform.yaml  local-redis-stack.conf
hub/: package-meta.yaml
src/: config.rs  main.rs  sink.rs
