[package]
name = "redis-connector-sink"
version = "0.1.0"
authors = ["Alexander Mikhalev <alex@metacortex.engineer>"]
edition = "2021"

[dependencies]
fluvio = { git = "https://github.com/infinyon/fluvio", tag="v0.10.8-dev-3"}
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag="v0.10.8-dev-3", features = ["derive"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
redis = { version = "0.23.0", features = ["json","async-std-comp"] }
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
async-std = { version = "1.12",  default-features = false, features = ["attributes"]}
serde_json = { version = "1", default-features = false }
url = { version = "2.3", default-features = false, features = ["serde"] }
